fix: pawn의 대각선 말을 잡을 수 없는 오류 수정